--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,6 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <!--<script src="js/facebook.js"></script>-->
-    <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootTable.js"></script>
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
@@ -40,27 +39,15 @@
 
   <body ng-app="starter">
 
-      <ion-header-bar class="bar-stable">
-        <ion-pane>
-        <button class="left"><span class="ion-pizza" menu-toggle="left"></span></button>
-        <ion-side-menus enable-menu-with-back-views="false">
-          <ion-side-menu-content>
+        <ion-side-menus>
+          <ion-pane ion-side-menu-content>
             <ion-nav-bar class="bar-stable">
-              <ion-nav-back-button>
-              </ion-nav-back-button>
 
-              <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-pizza" menu-toggle="left">
-                </button>
-              </ion-nav-buttons>
-              <ion-nav-buttons side="right">
-                <button class="button button-icon button-clear ion-icecream" menu-toggle="right">
-                </button>
-              </ion-nav-buttons>
+
+
             </ion-nav-bar>
-            <ion-nav-view name="menuContent">
-            </ion-nav-view>
-          </ion-side-menu-content>
+            <ion-nav-view></ion-nav-view>
+          </ion-pane>
 
           <ion-side-menu side="left">
             <ion-header-bar class="bar-stable">
@@ -105,18 +92,11 @@
               </ion-list>
             </ion-content>
           </ion-side-menu>
-        </ion-header-bar>
-
-
+          </ion-side-menus>
 
       <!--<location-list></location-list>-->
       <!--&lt;!&ndash;<homebase></homebase>&ndash;&gt;-->
       <!--<inventory></inventory>-->
-      <login></login>
-    </ion-pane>
-    <div id="status">
-
-    </div>
 
   </body>
 </html>
