--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/login.component.js"></script>
     <!--<script src="js/homebase.component.js"></script>-->
     <script src="js/inventory.component.js"></script>
+    <script src="js/menu.controller.js"></script>
     <script src="js/user.service.js"></script>
 
   </head>
@@ -39,60 +40,7 @@
 
   <body ng-app="starter">
 
-        <ion-side-menus>
-          <ion-pane ion-side-menu-content>
-            <ion-nav-bar class="bar-stable">
-
-
-
-            </ion-nav-bar>
-            <ion-nav-view></ion-nav-view>
-          </ion-pane>
-
-          <ion-side-menu side="left">
-            <ion-header-bar class="bar-stable">
-              <h1 class="title">Left</h1>
-            </ion-header-bar>
-            <ion-content>
-              <ion-list>
-                <ion-item menu-close ng-click="login()">
-                  Login
-                </ion-item>
-                <ion-item menu-close="#/app/search">
-                  Search
-                </ion-item>
-                <ion-item menu-close="#/app/browse">
-                  Browse
-                </ion-item>
-                <ion-item>
-                 Some Text
-                </ion-item>
-              </ion-list>
-            </ion-content>
-          </ion-side-menu>
-
-          <ion-side-menu side="right">
-            <ion-header-bar class="bar-stable">
-              <h1 class="title">Right</h1>
-            </ion-header-bar>
-            <ion-content>
-              <ion-list>
-                <ion-item menu-close ng-click="login()">
-                  Login
-                </ion-item>
-                <ion-item menu-close="#/app/search">
-                  Search
-                </ion-item>
-                <ion-item menu-close="#/app/browse">
-                  Browse
-                </ion-item>
-                <ion-item>
-                  Some Text
-                </ion-item>
-              </ion-list>
-            </ion-content>
-          </ion-side-menu>
-          </ion-side-menus>
+       <ion-nav-view></ion-nav-view>
 
       <!--<location-list></location-list>-->
       <!--&lt;!&ndash;<homebase></homebase>&ndash;&gt;-->
