old and desc to locale added

--- a/www/index.html
+++ b/www/index.html
@@ -22,9 +22,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <!--<script src="js/facebook.js"></script>-->
+    <!--<script src="js/old.facebook.js"></script>-->
     <script src="js/lootTable.js"></script>
-    <script src="js/lootChance.js"></script>
+    <!--<script src="js/old.lootChance.js"></script>-->
     <script src="js/locationList.component.js"></script>
     <script src="js/login.component.js"></script>
     <!--<script src="js/homebase.component.js"></script>-->
