--- a/www/index.html
+++ b/www/index.html
@@ -25,11 +25,11 @@
     <!--<script src="js/facebook.js"></script>-->
     <script src="js/lootTable.js"></script>
     <script src="js/lootChance.js"></script>
-    <script src="js/locationList.component.js"></script>
-    <script src="js/login.component.js"></script>
-    <!--<script src="js/homebase.component.js"></script>-->
-    <script src="js/inventory.component.js"></script>
-    <script src="js/menu.controller.js"></script>
+    <script src="controllers/locationList.controller.js"></script>
+    <script src="controllers/login.controller.js"></script>
+    <!--<script src="js/homebase.controller.js"></script>-->
+    <script src="controllers/inventory.controller.js"></script>
+    <script src="controllers/menu.controller.js"></script>
     <script src="js/user.service.js"></script>
     <script src="js/looting.service.js"></script>
 
