--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <!--<script src="js/old.facebook.js"></script>-->
     <script src="js/lootTable.js"></script>
     <!--<script src="js/old.lootChance.js"></script>-->
-    <script src="js/locationList.component.js"></script>
+    <script src="js/locationList.service.js"></script>
     <script src="js/login.component.js"></script>
     <!--<script src="js/homebase.component.js"></script>-->
     <script src="js/inventory.component.js"></script>
