no loops in the services

--- a/www/index.html
+++ b/www/index.html
@@ -11,28 +11,30 @@
   <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <!--script src="cordova.js"></script> -->
+      <!-- cordova script (this will be a 404 during development) -->
+      <!--script src="cordova.js"></script> -->
 
 
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- AngularFire -->
+      <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <!--<script src="js/old.facebook.js"></script>-->
-    <script src="js/lootTable.js"></script>
-    <!--<script src="js/old.lootChance.js"></script>-->
-    <!--<script src="js/lootChance.js"></script>-->
-    <script src="controllers/locationList.controller.js"></script>
-    <script src="controllers/login.controller.js"></script>
-    <!--<script src="js/homebase.controller.js"></script>-->
-    <script src="controllers/inventory.controller.js"></script>
-    <script src="controllers/menu.controller.js"></script>
-    <script src="services/user.service.js"></script>
-    <script src="services/looting.service.js"></script>
+      <!-- your app's js -->
+      <script src="js/app.js"></script>
+      <!--<script src="js/old.facebook.js"></script>-->
+      <script src="js/lootTable.js"></script>
+      <!--<script src="js/old.lootChance.js"></script>-->
+      <!--<script src="js/lootChance.js"></script>-->
+      <script src="controllers/locationList.controller.js"></script>
+      <script src="controllers/login.controller.js"></script>
+      <!--<script src="js/homebase.controller.js"></script>-->
+      <script src="controllers/inventory.controller.js"></script>
+      <script src="controllers/menu.controller.js"></script>
+      <script src="services/user.service.js"></script>
+      <script src="services/game.service.js"></script>
+      <script src="services/looting.service.js"></script>
+
 
   </head>
   <script type="text/javascript">
