--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
       <script src="services/user.service.js"></script>
       <script src="services/game.service.js"></script>
       <script src="services/looting.service.js"></script>
+      <script src="js/Materials.js"></script>
 
 
   </head>
