--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
       <script src="services/user.service.js"></script>
       <script src="services/game.service.js"></script>
       <script src="services/looting.service.js"></script>
-
+      <script src="services/locationList.service.js"></script>
 
 
   </head>
@@ -43,11 +43,11 @@
 
   <body ng-app="starter">
 
-       <ion-nav-view></ion-nav-view>
+      <ion-nav-view></ion-nav-view>
 
-      <!--<location-list></location-list>-->
-      <!--&lt;!&ndash;<homebase></homebase>&ndash;&gt;-->
-      <!--<inventory></inventory>-->
+      <!--/*<location-list></location-list>-->
+      <!--<homebase></homebase>-->
+      <!--<inventory></inventory>*/-->
 
   </body>
 </html>
