--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
        <ion-nav-view></ion-nav-view>
 
       <!--<location-list></location-list>-->
-      <!--&lt;!&ndash;<homebase></homebase>&ndash;&gt;-->
+      <!--<homebase></homebase>-->
       <!--<inventory></inventory>-->
 
   </body>
