--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
       <script src="services/user.service.js"></script>
       <script src="services/game.service.js"></script>
       <script src="services/looting.service.js"></script>
+      <script src="services/locationList.service.js"></script>
 
 
 
