--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
       <script src="js/Materials.js"></script>
       <script src="controllers/locationList.controller.js"></script>
       <script src="controllers/login.controller.js"></script>
-      <!--<script src="js/homebase.controller.js"></script>-->
+      <script src="controllers/homebase.controller.js"></script>
       <script src="controllers/inventory.controller.js"></script>
       <script src="controllers/menu.controller.js"></script>
       <script src="services/user.service.js"></script>
